fixed overflow items issue on desktop and tablets

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ ul.navbar{
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: auto;
+    /* overflow: auto; */
     background-color: rgb(223, 217, 217);
     position: fixed;
     height: 100%;
@@ -128,6 +128,7 @@ ul.navbar{
     width: 100%;
     height: 15%;
     display: block;
+    
 }
 
 }
